--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,71 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.row {
+    max-width: 1250px;
+    margin: 50px auto;
+    display: flex;
+    gap: 20px;
+}
+
+.product {
+    margin: 0 auto;
+    width: calc(100% / 3 - 20px);
+    position: relative;
+}
+
+.product img {
+    width: 100%;
+    display: block;
+}
+
+.heart {
+    padding: 15px;
+    background-color: white;
+    position: absolute;
+    top: 10px;
+    right: 0;
+}
+
+.heart:hover {
+    color: red;
+}
+
+.sale {
+    color: white;
+    position: absolute;
+    left: 0;
+    bottom: 90px;
+}
+
+.red {
+    background-color: red;
+    padding: 5px;
+}
+
+.green {
+    background-color: green;
+    padding: 5px;
+}
+
+.price {
+    color: red;
+    font-weight: bold;
+}
+
+.old-price {
+    text-decoration: line-through;
+}
+
+.hover {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.product:hover .hover {
+    display: block;
+
+}
