--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,67 @@
+/* RESET */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.row {
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/*/ RESET */
+
+
+/* HEADER */
+
+.header-container {
+    padding-bottom: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    color: white;
+    background-color: #ff6900;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+}
+
+header .header-container img {
+    width: 150px;
+}
+
+header .header-container ul {
+    list-style-type: none;
+    display: flex;
+    padding-top: 10px;
+}
+
+header .categoria li,
+header .awsome li {
+    margin: 0 10px;
+    font-size: 15px;
+}
+
+/*/ HEADER */
+
+
+/* MAIN */
+
+.main-container {
+    padding-top: 80px;
+}
+
+.main-container .row {
     max-width: 1250px;
-    margin: 50px auto;
+    margin: 0 auto;
+    padding: 50px 0;
     display: flex;
     gap: 20px;
 }
 
-.product {
+.main-container .row .product {
     margin: 0 auto;
     width: calc(100% / 3 - 20px);
     position: relative;
@@ -71,3 +121,5 @@
     display: block;
 
 }
+
+/*/ MAIN */
