--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,31 @@
     box-sizing: border-box;
 }
 
+/*/ RESET */
+
+
+/* COMMON */
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/*/ RESET */
+header,
+footer {
+    color: white;
+}
+
+
+/*/ COMMON */
 
 
 /* HEADER */
 
 .header-container {
-    padding-bottom: 30px;
+    padding: 10px 0 30px;
     display: flex;
     justify-content: space-evenly;
-    color: white;
+    align-items: center;
     background-color: #ff6900;
     position: fixed;
     top: 0;
@@ -35,7 +46,6 @@ header .header-container img {
 header .header-container ul {
     list-style-type: none;
     display: flex;
-    padding-top: 10px;
 }
 
 header .categoria li,
@@ -123,3 +133,30 @@ header .awsome li {
 }
 
 /*/ MAIN */
+
+
+/* FOOTER */
+
+footer {
+    background-color: #1a1a1a;
+    padding: 30px;
+}
+
+.footer-container {
+    max-width: 1250px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-container h3 {
+    margin-bottom: 20px;
+}
+
+.footer-container ul {
+    list-style-type: none;
+    display: flex;
+    gap: 10px;
+}
+
+/*/ FOOTER */
